Adds new menu categories
- ListView with all the categories populated
- Possibility to create new category
- Buttons for reset, edit and delete category

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="hora">Hora:&#160;&#160;</string>
     <string name="categories">Categorias</string>
     <string name="exit">Salir</string>
+    <string name="title_activity_categories">CategoriesActivity</string>
+    <string name="new_category">New Category</string>
+    <string name="name_category">Name Category</string>
+
 </resources>
